--- a/style.css
+++ b/style.css
@@ -141,3 +141,19 @@ button:hover,
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
     color: #fff;}
+
+    footer {
+  text-align: center;
+  margin-top: 40px;
+  padding: 20px;
+  
+  font-size: 14px;
+  color: #333;
+}
+footer a {
+  color: #007acc;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
+}
